[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-cli-migrate"
version = "1.0.0"
description = "Command-line tool to lint and modify bash scripts that use AWS CLI v1 to prevent breakage from changes introduced in AWS CLI v2."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["aws", "cli", "linter", "bash", "script", "migration", "v1", "v2", "codemod", "migrate"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "ast-grep-py==0.40.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<8.2.0",
    "ruff>=0.8.0,<0.14.0",
]

[project.urls]
Homepage = "https://github.com/aws/aws-cli"
"Bug Tracker" = "https://github.com/aws/aws-cli/issues"
Documentation = "https://github.com/aws/aws-cli"
"Source Code" = "https://github.com/aws/aws-cli"

[project.scripts]
migrate-aws-cli = "aws_cli_migrate.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aws_cli_migrate*"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true