[wheel]
universal = 0

[metadata]
requires_dist =
        botocore==1.29.114
        docutils>=0.10,<0.17
        s3transfer>=0.6.0,<0.7.0
        PyYAML>=3.10,<5.5
        colorama>=0.2.5,<0.4.5
        rsa>=3.1.2,<4.8

[check-manifest]
ignore =
    .github
    .github/*
    .coveragerc
    CHANGELOG.rst
    CONTRIBUTING.md
    CODE_OF_CONDUCT.md
    .travis.yml
    requirements*
    tox.ini
    .changes
    .changes/*
    tests
    tests/*
    scripts
    scripts/*
    doc
    doc/*
