[wheel]
universal = 0

[metadata]
requires_dist =
        docutils>=0.18.1,<=0.19
        PyYAML>=3.10,<6.1
        colorama>=0.2.5,<0.4.7
        rsa>=3.1.2,<4.8
        jmespath>=0.7.1,<2.0.0
        python-dateutil>=2.1,<3.0.0
        urllib3>=1.25.4,<1.27; python_version<"3.10"
        urllib3>=1.25.4,!=2.2.0,<3; python_version>="3.10"

[check-manifest]
ignore =
    .github
    .github/*
    .coveragerc
    CHANGELOG.rst
    CONTRIBUTING.md
    CODE_OF_CONDUCT.md
    .travis.yml
    requirements*
    tox.ini
    .changes
    .changes/*
    tests
    tests/*
    scripts
    scripts/*
    doc
    doc/*
