[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "awsclilinter"
version = "1.0.0"
description = "CLI tool to lint and upgrade bash scripts from AWS CLI v1 to v2"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["aws", "cli", "linter", "bash", "script", "migration", "v1", "v2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
dependencies = [
    "ast-grep-py==0.39.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<8.2.0",
    "ruff>=0.8.0,<0.14.0",
]

[project.urls]
Homepage = "https://github.com/aws/aws-cli"
"Bug Tracker" = "https://github.com/aws/aws-cli/issues"
Documentation = "https://github.com/aws/aws-cli"
"Source Code" = "https://github.com/aws/aws-cli"

[project.scripts]
migrate-aws-cli = "awsclilinter.cli:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["awsclilinter*"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true